Site almost ready for release and I dont use version control often enough

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>23's Mixing and Mastering Services</title>
+        <title>23.mu -- {{page.title}}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" type="text/css" href="/css/reset.css" /> 
         <link rel="stylesheet" type="text/css" href="/css/main.css" /> 
@@ -43,10 +43,10 @@
                         </div>
                         <div id="other">
                             <ul>
-                                <li><a href="/about">ABOUT</a></li>
-                                <li><a href="/media">MEDIA</a></li>
-                                <li><a href="/m.htm">MASTERING</a></li>
-                                <li><a href="/contact">CONTACT</a></li>
+                                <li><a href="/a">ABOUT</a></li>
+                                <li><a href="/sic">MEDIA</a></li>
+                                <li><a href="/m">MASTERING</a></li>
+                                <li><a href="/c">CONTACT</a></li>
                             </ul>
                         </div>
                     </div>
