--- a/less/main.less
+++ b/less/main.less
@@ -181,7 +181,7 @@ html {
     #content {
         padding-top:100px;
         #left {
-            width:66%;
+            width:65%;
             float:left;
         }
         #right {
@@ -225,6 +225,8 @@ html {
 }
 
 .cborder {
+    display:inline-block;
+    width:100%;
     background-color:@cborder;
     margin-bottom:10px;
 }
@@ -243,13 +245,14 @@ html {
             text-align:center;
             font-weight:lighter;
             font-size:2.5em;
-            letter-spacing:0.5em;
+            letter-spacing:0.3em;
         }
         h2 {
             font-size:2.2em;
             margin-bottom:5px;
         }
         h3 {
+            margin-top:10px;
             margin-bottom:10px;
         }
         h5 {
@@ -315,4 +318,10 @@ html {
     ul {
         margin-left:3em;
     }
+}
+
+#footer {
+    float:bottom;
+    height:100px;
+    text-align:center;
 }
