--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -25,15 +25,7 @@ layout: default
                             </div>
                         </div>
                     </div>
-                <script type="text/javascript">
-                    $(document).ready(function () {
-                            $('.container').corner("round 10px").parent().css('padding', '5px').corner("round 15px");
-                            $('#rss').rssfeed('http://pipes.yahoo.com/pipes/pipe.run?_id=c1892e23048e246a592b5f60ff8c878b&_render=rss', {
-                                limit: 5, header: false
-                                });
-                            });
-</script>
-                    <div class="cborder">
+                   <div class="cborder">
                         <div class="container">
                             <div class="text-inside">
                                 <h1>FEED</h1>
@@ -47,6 +39,15 @@ layout: default
                             <div class="text-inside">
                                 <h1>SHOWS</h1>
                                 <hr />
+                                <ul style="list-style-type:none;text-align:center;">
+                                    <li><a href="http://www.facebook.com/event.php?eid=110666345708008">Danbury, CT: Kandi Karnival</a>
+                                    <p>11/19/11</p></li>
+                                    <li><a href="http://www.facebook.com/SoundsLike23">Rochester, NY: With Dieselboy & Smash Gordon</a>
+                                    <p>12/30/11</p></li>
+                                    <li><a href="http://www.facebook.com/SoundsLike23">Buffalo, NY: Playhouse Buffalo</a>
+                                    <p>01/20/12</p></li>
+
+                                </ul>
                            </div>
                         </div>
                     </div>
